style: collect(Collectors.toList()) 대신 toList() 사용